--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,14 @@
 <head>
 	<title>Hello</title>
 </head>
+<style type="text/css">
+	p{color: yellow;
+
+	}
+	h1{color: blue;
+		text-align: center;
+	}
+</style>
 <body>
 <h1>Enumerating the SSL Certificate!</h1>
 <ul><li><h2>SSL Certificate</h2></li>
