--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -4,38 +4,34 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assignment Solution for Module 2</title>
+    <title>Module2 Solution</title>
     <link rel="stylesheet" href="css/design.css">
 </head>
 
 <body>
-    <h1>Notable Mathematicians</h1>
+    <h1>Types Of Hackers</h1>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <section class="lebesgue">
-                <h2>Henri Lebesgue</h2>
+            <section class="WhiteHatHackers">
+                <h2>White Hat Hackers</h2>
                 <p>
-                    Henri Lebesgue was born on 28 June 1875 in Beauvais, Oise. Lebesgue's father was a typesetter and his mother was a school teacher. His parents assembled at home a library that the young Henri was able to use. His father died of tuberculosis when Lebesgue
-                    was still very young and his mother had to support him by herself. As he showed a remarkable talent for mathematics in primary school, one of his instructors arranged for community support to continue his education at the Collège de
-                    Beauvais and then at Lycée Saint-Louis and Lycée Louis-le-Grand in Paris.
+                    The term "white hat" in Internet slang refers to an ethical computer hacker, or a computer security expert, who specializes in penetration testing and in other testing methodologies that ensures the security of an organization's information systems.
                 </p>
             </section>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <section class="fubini">
-                <h2>Guido Fubini</h2>
+            <section class="GreyHatHackers">
+                <h2>Grey Hat Hackers</h2>
                 <p>
-                    Born in Venice, he was steered towards mathematics at an early age by his teachers and his father, who was himself a teacher of mathematics. In 1896 he entered the Scuola Normale Superiore di Pisa, where he studied under the notable mathematicians Ulisse
-                    Dini and Luigi Bianchi. He gained some early fame when his 1900 doctoral thesis, entitled Clifford's parallelism in elliptic spaces, was discussed in a widely read work on differential geometry published by Bianchi in 1902.
+                    A grey hat is a computer hacker or computer security expert who may sometimes violate laws or typical ethical standards, but does not have the malicious intent typical of a black hat hacker. The term began to be used in the late 1990s, derived from the concepts of "white hat" and "black hat" hackers.
                 </p>
             </section>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
-            <section class="luzin">
-                <h2>Nikolai Luzin</h2>
+            <section class="BlackHatHackers">
+                <h2>Black Hat Hackers</h2>
                 <p>
-                    Nikolai Nikolaevich Luzin (also spelled Lusin;   9 December 1883 – 28 January 1950) was a Soviet/Russian mathematician known for his work in descriptive set theory and aspects of mathematical analysis with strong connections to point-set topology. He was
-                    the eponym of Luzitania, a loose group of young Moscow mathematicians of the first half of the 1920s. They adopted his set-theoretic orientation, and went on to apply it in other areas of mathematics.
+                    Black hat hackers are the stereotypical illegal hacking groups often portrayed in popular culture, and are "the epitome of all that the public fears in a computer criminal".[4] Black hat hackers break into secure networks to destroy, modify, or steal data, or to make the networks unusable for authorized network users.[5]
                 </p>
             </section>
         </div>
